--- a/src/components/pages/restaurant.css
+++ b/src/components/pages/restaurant.css
@@ -1,3 +1,41 @@
+.center-wrapper {
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+  min-height: 100vh; /* Full viewport height */
+}
+
+.container-fluid {
+  max-width: 1200px; /* Adjust as needed */
+  padding: 0 15px; /* Add some padding for better spacing */
+}
+
+.big {
+  height: 400px;
+  object-fit: cover;
+}
+
+.smallContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.smallImg {
+  display: flex;
+  gap: 5px;
+}
+
+.small {
+  flex: 1;
+  height: 195px;
+  object-fit: cover;
+}
+
+.imgContainer {
+  margin-top: 20px;
+}
+
 .rest-name{
     text-align: center;
 }
