--- a/src/components/ExploreSection/explore.css
+++ b/src/components/ExploreSection/explore.css
@@ -14,7 +14,8 @@ img{
     aspect-ratio: 1/.4;
 }
 .explore-header{
-    font-weight: 700;
+    font-weight: 800;
+    color: whitesmoke;
 }
 .explore-text{
     background-color: black;
@@ -22,9 +23,26 @@ img{
     color: white;
     width: 70%;
     text-align: center;
-    margin: 20% auto;
     margin-top: 0;
     padding: 10px;
     font-size: 1.1rem;
     
 }
+
+.carousel-caption {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* Center vertically */
+    align-items: center; /* Center horizontally */
+    text-align: center;
+    height: 100%; /* Ensure it takes full height of the carousel item */
+  }
+  
+  .explore-header {
+    font-size: 1.7rem; /* Adjust size as needed */
+    margin-bottom: 1rem; /* Space between header and text */
+  }
+  
+  .explore-text {
+    font-size: 1rem; /* Adjust size as needed */
+  }
