--- a/src/components/body/eventCard.css
+++ b/src/components/body/eventCard.css
@@ -4,3 +4,21 @@
 
 }
 
+.card-container {
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    padding: 1rem 0;
+    gap: .2rem;
+    scrollbar-width: none; /* For Firefox */
+    -ms-overflow-style: none; /* For Internet Explorer and Edge */
+  }
+  
+  .card-container::-webkit-scrollbar {
+    display: none; /* For Chrome, Safari, and Opera */
+  }
+
+  .card-inner{
+    width: 80%;
+  }
+  
