--- a/src/components/body/card.css
+++ b/src/components/body/card.css
@@ -4,12 +4,12 @@
   overflow-x: auto;
   padding: 1rem 0;
   gap: .2rem;
-  scrollbar-width: none; /* For Firefox */
-  -ms-overflow-style: none; /* For Internet Explorer and Edge */
+  scrollbar-width: none; 
+  -ms-overflow-style: none; 
 }
 
 .card-container::-webkit-scrollbar {
-  display: none; /* For Chrome, Safari, and Opera */
+  display: none; 
 }
 
 .card {
@@ -20,8 +20,8 @@
   flex-direction: column;
   background-color: whitesmoke;
   transition: 0.6s;
-  flex: 0 0 auto; /* Prevent flex items from shrinking */
-  width: 100%; /* Ensure card takes full width of Col */
+  flex: 0 0 auto;
+  width: 100%;
 }
 
 .card:hover {
@@ -55,16 +55,18 @@ span {
   gap: 4rem;
 }
 
-.card-inner{
-  width: 80%;
-}
+
 
 @media (max-width: 576px) {
   .card {
-    width: 100%; /* Adjust width for mobile view */
-    margin-right: .1rem; /* Add some spacing between cards */
+    width: 100%; 
+    margin-right: .1rem;
   }
   .scroll-btn{
     display: none;
   }
+  
+.card-inner{
+  width: 80%;
+}
 }
