--- a/src/components/body/eventCard.css
+++ b/src/components/body/eventCard.css
@@ -10,15 +10,13 @@
     overflow-x: auto;
     padding: 1rem 0;
     gap: .2rem;
-    scrollbar-width: none; /* For Firefox */
-    -ms-overflow-style: none; /* For Internet Explorer and Edge */
+    scrollbar-width: none; 
+    -ms-overflow-style: none;
   }
   
   .card-container::-webkit-scrollbar {
-    display: none; /* For Chrome, Safari, and Opera */
+    display: none; 
   }
 
-  .card-inner{
-    width: 80%;
-  }
+
   
