fix the checkout

--- a/src/components/header/filter/filter.css
+++ b/src/components/header/filter/filter.css
@@ -20,6 +20,7 @@ button.active {
 /* General styles for the filter buttons */
 .filter-btn {
   display: flex;
+  gap: .25rem;
   flex-wrap: nowrap;
   overflow-x: auto;
   scrollbar-width: none; /* For Firefox */
