--- a/src/components/pages/events.css
+++ b/src/components/pages/events.css
@@ -29,7 +29,7 @@
 }
 
 .buy-ticket-container{
-    width: 50%;
+    width: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -37,6 +37,7 @@
     padding: 20px 10px;
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
+    margin: 0 auto;
 }
 .event-content{
     border-bottom: 1px solid gray;
