--- a/src/components/pages/restaurant.css
+++ b/src/components/pages/restaurant.css
@@ -34,9 +34,12 @@
 .small {
   flex: 1;
   height: 195px;
+  width: 50%;
   object-fit: cover;
   
 }
+
+
 
 .imgContainer {
   margin-top: 20px;
@@ -50,7 +53,11 @@
     align-self: flex-start;
     margin-bottom: 5px;
 }
-
+.checkout-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
   
 .date-for-price {
     font-size: 20px;
@@ -113,6 +120,10 @@
   
     .offers-container .offers-icons-container {
       margin-top: 15px;
+    }
+
+    .checkin-out{
+      width: 100% !important;
     }
   }
   
